[package]
name = "catapult"
version = "0.1.0"
edition = "2021"

[dependencies]
allocative = "0.3.0"
anyhow = "1.0.65"
base64 = "0.21"
dirs = "5.0.1"
env_logger = "0.10"
flate2 = "1.0"
getopts = "0.2"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
starlark = "0.9.0"
tar = "0.4"
toml = "0.7.6"
uuid = { version = "1.4", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
