[package]
name = "ctplt"
version = "0.0.1"
description = "A package manager + build system for C and C++"
homepage = "http://catapult-build.com"
repository = "https://github.com/travbid/catapult"
license-file = "LICENSE"
edition = "2021"

[[bin]]
name = "catapult"
path = "src/bin/main.rs"

[lib]
name = "catapult"

[dependencies]
allocative = "0.3.1"
anyhow = "1.0.65"
base64 = "0.21"
clap = { version = "4.5.42" }
dirs = "5.0.1"
env_logger = "0.10"
flate2 = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
starlark = "0.12.0"
tar = "0.4"
toml = "0.8.1"
uuid = { version = "1.4", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[lints.clippy]
uninlined_format_args = "allow"