[package]
name = "ctplt"
version = "0.0.1"
description = "A package manager + build system for C and C++"
homepage = "http://catapult-build.com"
repository = "https://github.com/travbid/catapult"
license-file = "LICENSE"
edition = "2024"

[[bin]]
name = "catapult"
path = "src/bin/main.rs"

[lib]
name = "catapult"

[dependencies]
allocative = "0.3.4"
anyhow = "1.0"
base64 = "0.22"
clap = "4.6"
dirs = "6.0"
env_logger = "0.11"
flate2 = "1.1"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = "1.0"
starlark = "0.13.0"
tar = "0.4"
toml = "1.1"
uuid = { version = "1.23", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[lints.clippy]
uninlined_format_args = "allow"